test/error/0010-extraelif.c

/*
PATTERN: elif
*/

#if 1

#else

#elif 0

#endif
